# catz_settings

./: CMakeLists.txt  README.md  constants.hpp  demo.cpp  dongle.cpp  dongle.hpp  main.cpp  settings.cpp  settings.hpp
.github/workflows/: cmake-multi-platform.yml
ui/: CatzSettingsUi.cpp  CatzSettingsUi.h  ui.fbp
